--- a/css/style.css
+++ b/css/style.css
@@ -714,6 +714,9 @@ caption {
   }
 }
 /* Layout Style*/
+body {
+  background-color: #ff00ff;
+}
 body.fixed {
   position: fixed;
 }
@@ -822,23 +825,61 @@ header.expand nav a {
 header.expand nav > ul > li {
   background: url(../images/ico_nav_menu_arrow_blue.png) no-repeat right 9.7222222222vw;
   background-size: auto 4.4444444444vw;
+  border-bottom: 1px solid #E8E8E8;
 }
 header.expand nav > ul > li h3 a {
   display: flex;
   align-items: center;
   font-size: 6.1111111111vw;
+  font-weight: 400;
   height: 23.8888888889vw;
 }
 header.expand nav > ul > li > ul {
   position: relative;
-  top: -8.3333333333vw;
-  padding-left: 58.6111111111vw;
+  top: -16.6666666667vw;
+  left: 41.6666666667vw;
+  display: block;
+  width: calc(100% - 41.6666666667vw);
+  height: 0;
+  overflow: hidden;
+  transition: height 0.6s ease-out;
 }
 header.expand nav > ul > li > ul > li a {
   display: block;
   height: 7.2222222222vw;
   margin-top: 2.2222222222vw;
   color: #454545;
+  opacity: 0.7;
+}
+header.expand nav > ul > li > ul > li > ul {
+  margin-bottom: 5.5555555556vw;
+  padding-bottom: 5.5555555556vw;
+  border-bottom: 1px solid #E8E8E8;
+}
+header.expand nav > ul > li > ul > li > ul:last-child {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  border-bottom: 0;
+}
+header.expand nav > ul > li > ul > li > ul > li:first-child a {
+  font-size: 4.4444444444vw;
+  font-weight: 700;
+  color: #0D0D0D;
+  opacity: 1;
+}
+header.expand nav > ul > li.active {
+  background: url(../images/ico_nav_menu_arrow_blue_active.png) no-repeat right 9.7222222222vw;
+  background-size: auto 4.4444444444vw;
+}
+header.expand nav > ul > li.active h3 a {
+  font-weight: 700;
+  color: #00498C;
+}
+header.expand nav > ul > li.active > ul {
+  height: auto;
+}
+header.expand nav > ul > li.active > ul > li > ul > li.active a {
+  color: #08A2DC;
 }
 
 main {
