--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,7 @@ caption {
   font-weight: 700;
 }
 
+/* 상단 제목 및 비주얼 */
 .topArea {
   padding-top: 10vw;
   text-align: center;
@@ -295,6 +296,7 @@ caption {
     padding: 60px 48px 110px;
   }
 }
+/* 게시판 */
 .bbs_util {
   margin-bottom: 6.6666666667vw;
 }
@@ -338,7 +340,8 @@ caption {
   width: 4.4444444444vw;
   height: 4.4444444444vw;
   transform: translateY(-50%);
-  background: url(../images/ico_arrow_black.png) no-repeat 50% 50%;
+  background: url("../images/ico_arrow_black.png") no-repeat 50% 50%;
+  background-size: cover;
 }
 .bbs_sort .bbs_button.on::after {
   transform: rotate(180deg) translateY(50%);
@@ -370,7 +373,7 @@ caption {
   display: block;
   width: 6.6666666667vw;
   height: 6.6666666667vw;
-  background: url(../images/ico_search.png) no-repeat 50% 50%;
+  background: url("../images/ico_search.png") no-repeat 50% 50%;
 }
 
 .search-input {
@@ -498,6 +501,7 @@ caption {
     font-size: 16px;
   }
 }
+/* 페이징 */
 .paging {
   display: flex;
   justify-content: space-between;
@@ -529,25 +533,26 @@ caption {
 .paging a.arrow {
   background-repeat: no-repeat;
   background-position: 50% 50%;
+  background-size: cover;
 }
 .paging a.arrow.disabled {
   opacity: 0.3;
   filter: contrast(0.1);
 }
 .paging a.first {
-  background-image: url(../images/ico_arrow_rightbar.png);
+  background-image: url("../images/ico_arrow_rightbar.png");
   transform: rotate(180deg);
   margin-left: -3.6111111111vw;
 }
 .paging a.prev {
-  background-image: url(../images/ico_arrow_right.png);
+  background-image: url("../images/ico_arrow_right.png");
   transform: rotate(180deg);
 }
 .paging a.next {
-  background-image: url(../images/ico_arrow_right.png);
+  background-image: url("../images/ico_arrow_right.png");
 }
 .paging a.last {
-  background-image: url(../images/ico_arrow_rightbar.png);
+  background-image: url("../images/ico_arrow_rightbar.png");
   margin-right: -3.6111111111vw;
 }
 
@@ -581,6 +586,7 @@ caption {
     margin: 0 20px;
   }
 }
+/* 게시판 상세 */
 .bbsWrap .cont_tit {
   font-weight: 500;
 }
@@ -638,12 +644,14 @@ caption {
   transform: translateY(-50%);
   width: 4.4444444444vw;
   height: 4.4444444444vw;
-  background: url(../images/ico_arrow_black.png) no-repeat 50% 50%;
+  background: url("../images/ico_arrow_black.png") no-repeat 50% 50%;
+  background-size: cover;
 }
 .bbs-more li.prev::after {
   transform: translateY(-50%) rotate(-180deg);
 }
 
+/* 하단버튼 */
 .btn-area {
   margin-top: 6.6666666667vw;
   text-align: center;
@@ -711,6 +719,115 @@ caption {
     width: 312px;
     height: 60px;
     line-height: 60px;
+  }
+}
+/* 다운로드 리스트 */
+.download-list li + li {
+  margin-top: 3.3333333333vw;
+}
+.download-list li .inner {
+  position: relative;
+  height: 44.4444444444vw;
+  padding: 6.1111111111vw 6.6666666667vw;
+  border: 1px solid #E8E8E8;
+}
+.download-list li .inner:after {
+  content: "";
+  display: block;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 34.7222222222vw;
+  height: 36.1111111111vw;
+  background: url("../images/bg_download_cont.png") no-repeat 50% 50%;
+  background-size: cover;
+}
+.download-list li .number {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 3.8888888889vw;
+  color: #ABABAB;
+}
+.download-list li .tit {
+  font-weight: 500;
+  font-size: 4.4444444444vw;
+  word-break: keep-all;
+  color: #0D0D0D;
+}
+.download-list li .btn-download {
+  position: absolute;
+  bottom: 6.1111111111vw;
+  left: 6.6666666667vw;
+}
+
+.btn-download {
+  height: 6.1111111111vw;
+  font-size: 3.6111111111vw;
+  color: #454545;
+}
+.btn-download::before {
+  content: "";
+  display: inline-block;
+  width: 5vw;
+  height: 5vw;
+  margin-right: 2.2222222222vw;
+  background: url("../images/ico_download.png") no-repeat 50% 50%;
+  background-size: cover;
+  vertical-align: bottom;
+}
+
+@media all and (min-width: 961px) {
+  .download-list ul {
+    margin: -16px;
+    font-size: 0;
+  }
+  .download-list li {
+    display: inline-block;
+    width: 25%;
+    padding: 16px;
+  }
+  .download-list li + li {
+    margin-top: 0;
+  }
+  .download-list li .inner {
+    position: relative;
+    height: 276px;
+    padding: 30px 36px 32px;
+  }
+  .download-list li .inner:after {
+    width: 160px;
+    height: 170px;
+  }
+  .download-list li .inner:hover {
+    border: 1px solid #08A2DC;
+  }
+  .download-list li .inner:hover .btn-download {
+    color: #08A2DC;
+    font-weight: 700;
+  }
+  .download-list li .number {
+    margin-bottom: 5px;
+    font-size: 14px;
+  }
+  .download-list li .tit {
+    font-size: 18px;
+  }
+  .download-list li .btn-download {
+    position: absolute;
+    bottom: 32px;
+    left: 36px;
+  }
+
+  .btn-download {
+    height: 24px;
+    font-size: 14px;
+  }
+  .btn-download::before {
+    content: "";
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    margin-right: 8px;
   }
 }
 /* Layout Style*/
