--- a/css/ui.scss
+++ b/css/ui.scss
@@ -761,7 +761,7 @@
   }
   .tbl-finance-wrap{
     & + .tbl-title-area{
-      margin-top:get-vw(100px);
+      margin-top:100px;
     }
     .tbl-finance{
       th, td{
