--- a/css/ui.scss
+++ b/css/ui.scss
@@ -545,6 +545,7 @@
       margin-top:get-vw(12px);
     }
     .inner{
+      display:block;
       position: relative;
       height:get-vw(160px);
       padding:get-vw(22px) get-vw(24px);
