--- a/css/ui.scss
+++ b/css/ui.scss
@@ -773,6 +773,7 @@
 }
 /* 애경가치 */
 .founded-story{
+  position:relative;
   padding-top:get-vw(15px);
   text-align:center;
   .desc{
@@ -796,6 +797,190 @@
     img{
       width:get-vw(243px);
       height:100%;
+    }
+  }
+}
+.core-value{
+  position: relative;
+  padding-bottom:get-vw(50px);
+  .visual{
+    height: get-vw(400px);
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size:cover;
+    .tit{
+      display:block;
+      padding-top: get-vw(50px);
+      text-align: center;
+      font-weight: 700;
+      font-size:get-vw(24px);
+      color:#00498C;
+    }
+  }
+  .core-value-list{
+    position:relative;
+    margin:0 get-vw(24px);
+    margin-top:get-vw(-172px);
+    li{
+      position: relative;
+      padding:get-vw(20px) get-vw(18px) get-vw(24px) calc(get-vw(18px) + get-vw(65px));
+      background:rgba(0, 69, 135, 0.92);
+      backdrop-filter: blur(20px);
+      color:#FFFFFF;
+      & + li::before{
+        content:'';
+        display:block;
+        position: absolute;
+        top:0;
+        left:get-vw(18px);
+        width:calc(100% - get-vw(36px));
+        height:1px;
+        background:#EFF6FC;
+        opacity: 0.2;
+      }
+      &::after{
+        content:'';
+        display:block;
+        position:absolute;
+        top:get-vw(20px);
+        left:get-vw(24px);
+        width:get-vw(50px);
+        height:get-vw(50px);
+      }
+      &.clean{
+        height:get-vw(172px);
+        padding-top:get-vw(26px);
+      }
+      &.clean::after{
+        background:url("../images/ico_value_clean.png") no-repeat 50% 50%;
+        background-size:cover;
+      }
+      &.trust::after{
+        background:url("../images/ico_value_trust.png") no-repeat 50% 50%;
+        background-size:cover;
+      }
+      &.innovation::after{
+        background:url("../images/ico_value_innovation.png") no-repeat 50% 50%;
+        background-size:cover;
+      }
+      &.challenge::after{
+        background:url("../images/ico_value_challenge.png") no-repeat 50% 50%;
+        background-size:cover;
+      }
+      .tit{
+        font-weight: 500;
+        font-size:get-vw(19px);
+      }
+      .desc{
+        margin-top:get-vw(5px);
+        font-size:get-vw(14px);
+        line-height:1.57;
+      }
+    }
+  }
+}
+@media all and (min-width: 961px){
+  .founded-story{
+    display:flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    align-items: center;
+    padding-top:0;
+    text-align:left;
+    .desc{
+      margin-left:33px;
+      .caption{
+        font-size:24px;
+      }
+      p{
+        margin-top:16px;
+        & + p{
+          margin-top:16px;
+        }
+      }
+    }
+    .ak-cally{
+      width:567.65px;
+      height:auto;
+      margin-top:0;
+      text-align:left;
+      img{
+        width:100%;
+        height:auto;
+      }
+    }
+  }
+  .core-value{
+    padding-bottom:100px;
+    .visual{
+      height: 600px;
+      .tit{
+        display:block;
+        padding-top: 80px;
+        font-size:36px;
+      }
+    }
+    .core-value-list{
+      display:flex;
+      position:relative;
+      max-width:1200px;
+      margin:0 auto;
+      // margin-top:get-vw(-172px);
+      li{
+        position: relative;
+        width:25%;
+        padding:40px 0 42px;
+        text-align: center;
+        & + li::before{
+          content:'';
+          display:block;
+          position: absolute;
+          top:auto;
+          bottom:0;
+          left:0;
+          width:1px;
+          height:104px;
+          background:#EFF6FC;
+          opacity: 0.2;
+        }
+        &::after{
+          content:'';
+          display:block;
+          position:absolute;
+          top:get-vw(20px);
+          left:get-vw(24px);
+          width:get-vw(50px);
+          height:get-vw(50px);
+        }
+        &.clean{
+          height:auto;
+          padding:40px 0 42px;
+        }
+        &.clean::after{
+          background:url("../images/ico_value_clean.png") no-repeat 50% 50%;
+          background-size:cover;
+        }
+        &.trust::after{
+          background:url("../images/ico_value_trust.png") no-repeat 50% 50%;
+          background-size:cover;
+        }
+        &.innovation::after{
+          background:url("../images/ico_value_innovation.png") no-repeat 50% 50%;
+          background-size:cover;
+        }
+        &.challenge::after{
+          background:url("../images/ico_value_challenge.png") no-repeat 50% 50%;
+          background-size:cover;
+        }
+        .tit{
+          font-weight: 500;
+          font-size:24px;
+        }
+        .desc{
+          margin-top:get-vw(5px);
+          font-size:16px;
+        }
+      }
     }
   }
 }
