--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,15 @@ caption {
   font-size: 4.4444444444vw;
 }
 
+.topArea.sub {
+  padding-top: 27.7777777778vw;
+}
+
+@media all and (min-width: 960px) {
+  .topArea.sub {
+    padding-top: 158px;
+  }
+}
 .cont {
   padding: 8.3333333333vw 6.6666666667vw 12.2222222222vw;
 }
@@ -237,11 +246,62 @@ caption {
   line-height: 1.4;
 }
 .topArea .visual {
+  position: relative;
   margin-top: 3.3333333333vw;
   height: 66.6666666667vw;
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
+}
+.topArea .visual .top-tab {
+  position: absolute;
+  top: 53.3333333333vw;
+  left: 6.6666666667vw;
+  width: calc(100vw - 13.3333333333vw);
+  height: 13.3333333333vw;
+  background-color: #00498C;
+  z-index: 1;
+}
+.topArea .visual .top-tab.on {
+  height: auto;
+}
+.topArea .visual .top-tab.on ul li.active a {
+  color: #8CE0FF;
+}
+.topArea .visual .top-tab.on ul li:first-child a::after {
+  transform: rotate(180deg) translateY(50%);
+}
+.topArea .visual .top-tab.on ul li a {
+  display: flex;
+}
+.topArea .visual .top-tab ul li:first-child a {
+  display: flex !important;
+  position: relative;
+  background-color: #00498c;
+  font-weight: 700;
+}
+.topArea .visual .top-tab ul li:first-child a::after {
+  content: "";
+  display: block;
+  position: absolute;
+  right: 6.6666666667vw;
+  top: 50%;
+  width: 4.4444444444vw;
+  height: 4.4444444444vw;
+  transform: translateY(-50%);
+  background: url("../images/ico_arrow_white.png") no-repeat 50% 50%;
+  background-size: cover;
+}
+.topArea .visual .top-tab ul li a {
+  display: none;
+  width: 100%;
+  height: 13.3333333333vw;
+  padding: 0 6.6666666667vw;
+  line-height: 13.3333333333vw;
+  font-size: 4.7222222222vw;
+  font-weight: 500;
+  color: #fff;
+  background-color: #003a70;
 }
 
 @media all and (max-width: 960px) {
@@ -275,6 +335,33 @@ caption {
   .topArea .visual {
     margin-top: 32px;
     height: 480px;
+  }
+  .topArea .visual .top-tab {
+    position: absolute;
+    top: 443px;
+    left: 6.6666666667vw;
+    width: calc(100vw - 13.3333333333vw);
+    background-color: #00498C;
+    z-index: 1;
+  }
+  .topArea .visual .top-tab ul {
+    display: flex;
+    height: 74px !important;
+  }
+  .topArea .visual .top-tab ul li:first-child a {
+    display: inline-flex !important;
+    position: relative;
+    background-color: #00498c;
+    font-weight: 700;
+  }
+  .topArea .visual .top-tab ul li:first-child a::after {
+    display: none;
+  }
+  .topArea .visual .top-tab ul li a {
+    display: flex;
+    height: 74px;
+    font-size: 18px;
+    font-weight: 400;
   }
 
   .cont {
@@ -345,6 +432,9 @@ caption {
 }
 .bbs_sort .bbs_button.on::after {
   transform: rotate(180deg) translateY(50%);
+}
+.bbs_sort .bbs_button.on + .bbs_sortList {
+  display: block;
 }
 .bbs_sort .bbs_sortList {
   display: none;
@@ -729,6 +819,7 @@ caption {
   margin-top: 3.3333333333vw;
 }
 .download-list li .inner {
+  display: block;
   position: relative;
   height: 44.4444444444vw;
   padding: 6.1111111111vw 6.6666666667vw;
@@ -943,9 +1034,235 @@ caption {
     padding: 20px;
   }
 }
+/* 애경가치 */
+.founded-story {
+  position: relative;
+  padding-top: 4.1666666667vw;
+  text-align: center;
+}
+.founded-story .desc .caption {
+  font-size: 5.2777777778vw;
+}
+.founded-story .desc p {
+  margin-top: 2.5vw;
+  font-weight: 400;
+  color: #454545;
+}
+.founded-story .desc p + p {
+  margin-top: 3.8888888889vw;
+}
+.founded-story .ak-cally {
+  width: 100%;
+  height: auto;
+  margin-top: 8.8888888889vw;
+  text-align: right;
+}
+.founded-story .ak-cally img {
+  width: 67.5vw;
+  height: 100%;
+}
+
+.core-value {
+  position: relative;
+  padding-bottom: 13.8888888889vw;
+}
+.core-value .visual {
+  height: 111.1111111111vw;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.core-value .visual .tit {
+  display: block;
+  padding-top: 13.8888888889vw;
+  text-align: center;
+  font-weight: 700;
+  font-size: 6.6666666667vw;
+  color: #00498C;
+}
+.core-value .core-value-list {
+  position: relative;
+  margin: 0 6.6666666667vw;
+  margin-top: -47.7777777778vw;
+}
+.core-value .core-value-list li {
+  position: relative;
+  padding: 5.5555555556vw 5vw 6.6666666667vw calc(5vw + 18.0555555556vw);
+  background: rgba(0, 69, 135, 0.92);
+  backdrop-filter: blur(20px);
+  color: #FFFFFF;
+}
+.core-value .core-value-list li + li::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 5vw;
+  width: calc(100% - 10vw);
+  height: 1px;
+  background: #EFF6FC;
+  opacity: 0.2;
+}
+.core-value .core-value-list li::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 5.5555555556vw;
+  left: 6.6666666667vw;
+  width: 13.8888888889vw;
+  height: 13.8888888889vw;
+}
+.core-value .core-value-list li.clean {
+  height: 47.7777777778vw;
+  padding-top: 7.2222222222vw;
+}
+.core-value .core-value-list li.clean::after {
+  background: url("../images/ico_value_clean.png") no-repeat 50% 50%;
+  background-size: cover;
+}
+.core-value .core-value-list li.trust::after {
+  background: url("../images/ico_value_trust.png") no-repeat 50% 50%;
+  background-size: cover;
+}
+.core-value .core-value-list li.innovation::after {
+  background: url("../images/ico_value_innovation.png") no-repeat 50% 50%;
+  background-size: cover;
+}
+.core-value .core-value-list li.challenge::after {
+  background: url("../images/ico_value_challenge.png") no-repeat 50% 50%;
+  background-size: cover;
+}
+.core-value .core-value-list li .tit {
+  font-weight: 500;
+  font-size: 5.2777777778vw;
+}
+.core-value .core-value-list li .desc {
+  margin-top: 1.3888888889vw;
+  font-size: 3.8888888889vw;
+  line-height: 1.57;
+}
+
+@media all and (min-width: 961px) {
+  .founded-story {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    align-items: center;
+    padding-top: 0;
+    text-align: left;
+  }
+  .founded-story .desc {
+    margin-left: 33px;
+  }
+  .founded-story .desc .caption {
+    font-size: 24px;
+  }
+  .founded-story .desc p {
+    margin-top: 16px;
+  }
+  .founded-story .desc p + p {
+    margin-top: 16px;
+  }
+  .founded-story .ak-cally {
+    width: 567.65px;
+    height: auto;
+    margin-top: 0;
+    text-align: left;
+  }
+  .founded-story .ak-cally img {
+    width: 100%;
+    height: auto;
+  }
+
+  .core-value {
+    padding-bottom: 100px;
+  }
+  .core-value .visual {
+    height: 600px;
+  }
+  .core-value .visual .tit {
+    display: block;
+    padding-top: 80px;
+    font-size: 36px;
+  }
+  .core-value .core-value-list {
+    display: flex;
+    position: relative;
+    max-width: 1200px;
+    height: 310px;
+    margin: -155px auto 0;
+  }
+  .core-value .core-value-list li {
+    position: relative;
+    width: 25%;
+    padding: 118px 0 42px;
+    text-align: center;
+  }
+  .core-value .core-value-list li + li::before {
+    top: auto;
+    bottom: 42px;
+    left: 0;
+    width: 1px;
+    height: 104px;
+  }
+  .core-value .core-value-list li::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 40px;
+    left: 50%;
+    width: 72px;
+    height: 72px;
+    transform: translateX(-50%);
+  }
+  .core-value .core-value-list li.clean {
+    height: auto;
+    padding-top: 118px;
+  }
+  .core-value .core-value-list li.clean::after {
+    background: url("../images/ico_value_clean.png") no-repeat 50% 50%;
+    background-size: cover;
+  }
+  .core-value .core-value-list li.trust::after {
+    background: url("../images/ico_value_trust.png") no-repeat 50% 50%;
+    background-size: cover;
+  }
+  .core-value .core-value-list li.innovation::after {
+    background: url("../images/ico_value_innovation.png") no-repeat 50% 50%;
+    background-size: cover;
+  }
+  .core-value .core-value-list li.challenge::after {
+    background: url("../images/ico_value_challenge.png") no-repeat 50% 50%;
+    background-size: cover;
+  }
+  .core-value .core-value-list li .tit {
+    font-weight: 500;
+    font-size: 24px;
+  }
+  .core-value .core-value-list li .desc {
+    margin-top: 1.3888888889vw;
+    font-size: 16px;
+  }
+}
+@media all and (min-width: 961px) and (max-width: 1320px) {
+  .core-value .core-value-list {
+    width: 100%;
+    padding: 0 48px;
+  }
+  .core-value .core-value-list li {
+    padding: 118px 20px 42px;
+  }
+  .core-value .core-value-list li .desc {
+    word-break: keep-all;
+  }
+  .core-value .core-value-list li br {
+    display: none;
+  }
+}
 /* Layout Style*/
 body.fixed {
   position: fixed;
+  width: 100%;
 }
 
 header {
@@ -962,6 +1279,7 @@ header {
   box-sizing: border-box;
   background-color: #fff;
   transition: background-color 0.3s;
+  z-index: 9;
 }
 header .head {
   display: flex;
@@ -978,6 +1296,9 @@ header .head h1 a img:nth-child(1) {
 }
 header .head h1 a img:nth-child(2) {
   display: block;
+}
+header .head .quick-menu {
+  display: none;
 }
 header .head .btn-show-menu {
   width: 8.3333333333vw;
@@ -1010,7 +1331,6 @@ header.top .head .btn-show-menu:before, header.top .head .btn-show-menu:after {
   background-color: #fff;
 }
 header.expand {
-  position: relative;
   background-color: #00498C !important;
 }
 header.expand .head h1 a img:nth-child(1) {
@@ -1048,6 +1368,9 @@ header.expand nav {
 header.expand nav a {
   font-size: 3.8888888889vw;
   font-weight: 500;
+}
+header.expand nav > ul > em {
+  display: none;
 }
 header.expand nav > ul > li {
   background: url(../images/ico_nav_menu_arrow_blue.png) no-repeat right 9.7222222222vw;
@@ -1109,6 +1432,295 @@ header.expand nav > ul > li.active > ul > li > ul > li.active a {
   color: #08A2DC;
 }
 
+@media all and (min-width: 961px) {
+  header {
+    height: 92px;
+  }
+  header.top .head .quick-menu ul li a {
+    color: #fff;
+  }
+  header .head h1 a img {
+    height: 32px;
+  }
+  header .head .quick-menu {
+    display: block;
+  }
+  header .head .quick-menu ul {
+    display: flex;
+  }
+  header .head .quick-menu ul li {
+    margin-right: 160px;
+  }
+  header .head .quick-menu ul li.active a {
+    position: relative;
+    display: flex;
+  }
+  header .head .quick-menu ul li.active a:after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 30px;
+    width: 6px;
+    height: 6px;
+    margin-left: -3px;
+    border-radius: 50%;
+    background-color: #00498C;
+  }
+  header .head .quick-menu ul li a {
+    font-size: 17px;
+    font-weight: 700;
+    color: #454545;
+  }
+  header .head .quick-menu ul li:last-child {
+    margin-right: 0;
+  }
+  header .head .btn-show-menu {
+    width: 30px;
+    height: 30px;
+  }
+  header .head .btn-show-menu:before, header .head .btn-show-menu:after {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 2px;
+    background-color: #454545;
+    transition: background-color 0.3s, transform 0.3s;
+  }
+  header .head .btn-show-menu:after {
+    margin-top: 6px;
+  }
+  header.show-menu {
+    flex-direction: column;
+    line-height: 93px;
+    box-sizing: border-box;
+  }
+  header.show-menu .quick-menu ul li.active a:after {
+    top: 64px;
+  }
+  header.show-menu .quick-menu ul li a {
+    position: relative;
+    display: flex;
+  }
+  header.show-menu .quick-menu ul li a:after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 64px;
+    display: none;
+    width: 6px;
+    height: 6px;
+    margin-left: -3px;
+    border-radius: 50%;
+    background-color: #00498C;
+  }
+  header.show-menu nav {
+    display: flex;
+    width: 100vw;
+    height: 265px;
+    padding: 36px 0;
+    box-sizing: content-box;
+    background-color: #00498C;
+  }
+  header.show-menu nav > ul {
+    width: 100%;
+    height: 100%;
+  }
+  header.show-menu nav > ul > li {
+    display: none;
+    width: 100%;
+    height: 100%;
+  }
+  header.show-menu nav > ul > li h3 {
+    display: none;
+  }
+  header.show-menu nav > ul > li > ul {
+    width: 100%;
+    max-width: 1200px;
+    height: 100%;
+    margin: 0 auto;
+  }
+  header.show-menu nav > ul > li > ul > li {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    height: 100%;
+  }
+  header.show-menu nav > ul > li > ul > li > em {
+    display: block;
+    width: 1px;
+    height: 100%;
+    background-color: #EFF6FC;
+    opacity: 0.15;
+  }
+  header.show-menu nav > ul > li > ul > li > ul {
+    width: 160px;
+  }
+  header.show-menu nav > ul > li > ul > li > ul > li {
+    height: 26px;
+    line-height: 26px;
+    margin-top: 6px;
+  }
+  header.show-menu nav > ul > li > ul > li > ul > li.active a {
+    color: #08A2DC !important;
+    text-decoration: underline;
+    opacity: 1;
+  }
+  header.show-menu nav > ul > li > ul > li > ul > li:first-child.active a {
+    color: #fff !important;
+    text-decoration: underline;
+  }
+  header.show-menu nav > ul > li > ul > li > ul > li:first-child a {
+    font-size: 17px;
+    font-weight: 700;
+    opacity: 1;
+  }
+  header.show-menu nav > ul > li > ul > li > ul > li a {
+    font-size: 16px;
+    font-weight: 500;
+    color: #fff;
+    opacity: 0.7;
+  }
+  header.show-menu.menu0 .quick-menu ul li:nth-child(1) a:after {
+    display: block;
+  }
+  header.show-menu.menu0 nav > ul > li:nth-child(1) {
+    display: flex;
+  }
+  header.show-menu.menu1 .quick-menu ul li:nth-child(2) a:after {
+    display: block;
+  }
+  header.show-menu.menu1 nav > ul > li:nth-child(3) {
+    display: flex;
+  }
+  header.show-menu.menu2 .quick-menu ul li:nth-child(3) a:after {
+    display: block;
+  }
+  header.show-menu.menu2 nav > ul > li:nth-child(5) {
+    display: flex;
+  }
+  header.show-menu.menu3 .quick-menu ul li:nth-child(4) a:after {
+    display: block;
+  }
+  header.show-menu.menu3 nav > ul > li:nth-child(7) {
+    display: flex;
+  }
+  header.expand {
+    background-color: #fff !important;
+  }
+  header.expand .head h1 a img:nth-child(1) {
+    display: none !important;
+  }
+  header.expand .head h1 a img:nth-child(2) {
+    display: block !important;
+  }
+  header.expand .head .btn-show-menu:before, header.expand .head .btn-show-menu:after {
+    background-color: #454545 !important;
+    transform-origin: 10px;
+  }
+  header.expand .head .btn-show-menu:before {
+    transform: rotate(45deg);
+  }
+  header.expand .head .btn-show-menu:after {
+    transform: rotate(-45deg);
+  }
+  header.expand nav {
+    top: 92px;
+    bottom: unset;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    height: calc(100vh - 92px);
+    margin: 0 auto;
+    padding: 125px 30px 0;
+    box-sizing: border-box;
+    font-weight: 400;
+    color: #0D0D0D;
+    overflow-y: auto;
+  }
+  header.expand nav a {
+    font-size: 16px;
+    font-weight: 500;
+  }
+  header.expand nav > ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 100%;
+    max-width: 1200px;
+  }
+  header.expand nav > ul > em {
+    content: "";
+    display: block;
+    width: 1px;
+    height: 100%;
+    background-color: #E8E8E8;
+  }
+  header.expand nav > ul > li {
+    background: none;
+    border-bottom: none;
+  }
+  header.expand nav > ul > li h3 a {
+    display: flex;
+    align-items: center;
+    height: auto;
+    font-size: 32px;
+    font-weight: 700;
+    color: #00498C;
+  }
+  header.expand nav > ul > li > ul {
+    position: relative;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 160px;
+    height: auto;
+  }
+  header.expand nav > ul > li > ul > li a {
+    display: block;
+    height: auto;
+    margin-top: 0;
+    color: #454545;
+    opacity: 0.7;
+  }
+  header.expand nav > ul > li > ul > li > ul {
+    margin-top: 30px;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    border-bottom: 0;
+  }
+  header.expand nav > ul > li > ul > li > ul:last-child {
+    margin-bottom: 0;
+    padding-bottom: 0;
+    border-bottom: 0;
+  }
+  header.expand nav > ul > li > ul > li > ul > li {
+    margin-top: 10px;
+  }
+  header.expand nav > ul > li > ul > li > ul > li.active a {
+    color: #08A2DC !important;
+    text-decoration: underline;
+  }
+  header.expand nav > ul > li > ul > li > ul > li:first-child a {
+    font-size: 17px;
+    font-weight: 700;
+    color: #0D0D0D;
+    opacity: 1;
+  }
+  header.expand nav > ul > li.active {
+    background: none;
+  }
+  header.expand nav > ul > li.active h3 a {
+    font-weight: 700;
+    color: #00498C;
+  }
+  header.expand nav > ul > li.active > ul {
+    height: auto;
+  }
+  header.expand nav > ul > li.active > ul > li > ul > li.active a {
+    color: #08A2DC;
+    text-decoration: underline;
+  }
+}
 main {
   height: 100vh;
 }
