--- a/css/ui.scss
+++ b/css/ui.scss
@@ -167,20 +167,36 @@
       .top-tab {
         position: absolute;
         top: 443px;
-        left: get-vw(24px);
-        width: calc(100vw - get-vw(48px));
+        left: 24px;
+        width: 100%;
+        height: 74px;
         background-color: #00498C;
         z-index: 1;
         ul {
           display: flex;
-          height: 74px!important;
           li {
+            height: 74px;
+            &.active {
+              position: relative;
+              a {
+                font-weight: 700;
+                &::after{
+                  content: '';
+                  position: absolute;
+                  left: 0;
+                  bottom: 0;
+                  display: block;
+                  width: 100%;
+                  height: 6px;
+                  background-color: #43C9FB;
+                }
+              }
+            }
             &:first-child {
               a {
                 display: inline-flex!important;
-                position: relative;
-                background-color: #00498c;
-                font-weight: 700;
+                background-color: #00498C;
+                font-weight: 400;
                 &::after{
                   display: none;
                 }
@@ -189,8 +205,11 @@
             a {
               display: flex;
               height: 74px;
+              line-height: 74px;
               font-size: 18px;
               font-weight: 400;
+              background-color: #00498C;
+              color: #fff;
             }
           }
         }
